--- a/project1.html
+++ b/project1.html
@@ -43,7 +43,7 @@
 
   <footer class="site-footer">
     <div class="container">
-      <p class="footer-text">Portfolio additional - Dawon</p>
+      <p class="footer-text">포트폴리오 추가 자료 - 김다원</p>
     </div>
   </footer>
 </body>
