--- a/project2.html
+++ b/project2.html
@@ -38,7 +38,7 @@
 
   
   <main class="container">
-    <h2 class="site-ztitle">프로토타입 영상 & 설명 슬라이드</h2>
+    <h2 class="site-ztitle">프로토타입 영상 & 설명</h2>
     <p class="site-zsub" style="margin-bottom: 4px;">⓪ 홈 - ① 배우기 - ② 읽기 (동화책 생성 및 읽기) - ③ 놀기 </p>
     <p class="footer-ztext" style="margin-bottom: 12px;">(정지된 화면과 움직이는 화면이 혼합되어 있습니다)</p>
 
